fix: 솔드아웃 아이콘 z-index 삭제

--- a/components/Common/PhotoCard/PhotoCard.module.css
+++ b/components/Common/PhotoCard/PhotoCard.module.css
@@ -39,8 +39,6 @@
   height: 27rem;
 
   background-color: rgba(0, 0, 0, 0.5);
-
-  z-index: 5;
 }
 
 .badge {
